# llmbus

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-iggy-server.yml  ci.yml
deploy/: README.md  deploy.sh  docker-compose.prod.yml  iggy-server.service  iggy.env.example  llmbus-costs.service  llmbus-worker.service  smoke.py
notes/: hate-mod-integration-facts-2026-07-21.md  hate-mod-integration-facts.md  hate-mod-integration-survey.md  iggy-sdk-auth-reconnect.md  milamber-integration-survey.md  model-pricing-openai.md
src/llmbus/: __init__.py  cli.py  client.py  config.py  cost.py  dashboard.py  policy_page.py  policy_seed.py  processing.py  ratelimit.py  retry.py  schema.py  seed_cli.py  server.py  store.py  webauth.py  worker.py
src/llmbus/providers/: __init__.py  anthropic.py  base.py  openai.py
tests/integration/: test_client_integration.py  test_live_api.py  test_worker_integration.py
tests/unit/: test_cli.py  test_client.py  test_config.py  test_config_worker.py  test_cost.py  test_dashboard.py  test_deploy_smoke.py  test_model_policy_compatibility.py  test_policy_page.py  test_policy_seed.py  test_processing.py  test_providers_anthropic.py  test_providers_base.py  test_providers_openai.py  test_ratelimit.py  test_retry.py  test_schema.py  test_server.py  test_store.py  test_webauth.py  test_worker.py
