[project]
name = "llmbus"
version = "0.1.0"
description = "Central message bus for LLM traffic, backed by Apache Iggy."
readme = "README.md"
# Upper-bounded: apache-iggy ships wheels only up to cp313; on 3.14+ uv would
# fall back to compiling the Rust/PyO3 binding from source. Lift when the SDK
# publishes cp314 wheels.
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic>=2.7",
    "apache-iggy>=0.8",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "mutmut>=3.0",
    "mypy>=2.0",
    "ruff>=0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llmbus"]

# Project-local ruff config. Mirrors ~/.config/ruff/ruff.toml but pins py313.
[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["F", "I", "N", "ANN", "BLE", "PLR0913", "PLR0915"]
ignore = ["ANN401"]

[tool.ruff.lint.pylint]
max-args = 4
max-statements = 25

[tool.ruff.lint.per-file-ignores]
# Tests use fixtures/helpers where full annotations add noise, not safety.
"tests/**" = ["ANN"]

# Static type gate. Runs strict over src/ only — the shipped code. Tests are
# intentionally unchecked, mirroring the ruff `tests/** = ANN` ignore below:
# test bodies use fixtures/helpers where full annotations add noise, not safety.
# The pydantic plugin teaches mypy about model fields, aliases, and validators
# so schema.py is checked as real types, not `Any`.
[tool.mypy]
python_version = "3.13"
files = ["src/llmbus"]
strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running Iggy server (dev: docker compose up -d)",
]

[tool.coverage.run]
source = ["src/llmbus"]
branch = true

[tool.coverage.report]
fail_under = 90
show_missing = true

# Mutation testing is scoped to pure-logic modules only (see CLAUDE.md).
# Integration-touching code (client/worker/store) is excluded — each mutant
# would need a live Iggy server. Expand this list as pure modules are added.
# NOTE: schema.py is declarative Pydantic (few mutable statements); real
# mutation value arrives with cost.py / ratelimit.py.
[tool.mutmut]
source_paths = [
    "src/llmbus/schema.py",
    "src/llmbus/cost.py",
    "src/llmbus/ratelimit.py",
    "src/llmbus/providers/__init__.py",
    "src/llmbus/providers/base.py",
]
